--- a/KernelTestingWPF/KernelTestingWPF.csproj
+++ b/KernelTestingWPF/KernelTestingWPF.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{40BB949F-FA10-414A-8762-EC5D3AC0B83B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>KernelTestingWPF</RootNamespace>
     <AssemblyName>KernelTestingWPF</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
