--- a/KernelTestingWPF/KernelTestingWPF.csproj
+++ b/KernelTestingWPF/KernelTestingWPF.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{40BB949F-FA10-414A-8762-EC5D3AC0B83B}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>KernelTestingWPF</RootNamespace>
     <AssemblyName>KernelTestingWPF</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
@@ -58,9 +58,16 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CoreManager.cs" />
+    <Compile Include="FastSlowPage.xaml.cs">
+      <DependentUpon>FastSlowPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NavigationContext.cs" />
     <Compile Include="Scheduler.cs" />
     <Page Include="ConfigurePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FastSlowPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
